Correzzione classe Eroe e battlemanager